--- a/_posts/2018-05-24-curves.md
+++ b/_posts/2018-05-24-curves.md
@@ -1,40 +1,40 @@
 ---
 layout: post
-title: You with all those (ROC) curves
+title: Love your (ROC) curves
 description: A brief explanation about ROC curves
 featured: true
 ---
-
-You've probably heard of Receiver Operating Characteristic (ROC) curves and AUC
-values used to score and rank classification algorithms. However, for the
+Ranking models is an important step in deciding whether your model tuning
+efforts decidely worked for the best or not. There's two popular metrics used to
+score and rank classification algorithms, Receiver Operating Characteristic
+(ROC) curves and AUC values.
+However, for the
 longest time I've found them unintuitive. So my fellow [rubber ducklings](https://en.wikipedia.org/wiki/Rubber_duck_debugging), let's
 break down some basic properties.
 
 {: align="middle"}
 ![roc]
 
-An ROC curve plots the performance of a binary classifier under various threshold
-settings. This is the true positive rate (TPR) and false positive rate (FPR).
-rate. TPR is the proportion positive correctly classified (TP/P) and  False
-positive rate (FPR) is calculated by 1-TNR (TN/N).
-If your classifier predicts “true” more often, it will have more true positives
-(good) but also more false positives (bad). If your classifier is more
-conservative, predicting “true” less often, it will have fewer false positives
-but fewer true positives as well. The ROC curve is a graphical representation of
-this tradeoff.
-An ideal classifier would have a 100% true positive rate and
-0% false positive rate.
+An ROC curve plots the performance of a binary classifier under various
+threshold settings. This is the true positive rate (TPR) and false positive rate
+(FPR). TPR is the proportion positive correctly classified (TP/P) and the FPR is
+calculated by 1-TNR (TN/N). If your classifier predicts “true” more often, it
+will have more true positives (good) but also more false positives (bad). If
+your classifier is more conservative, predicting “true” less often, it will have
+fewer false positives but fewer true positives as well. The ROC curve is a
+graphical representation of this tradeoff. An ideal classifier would have a 100%
+true positive rate and 0% false positive rate.
 
-When observing the plot, if the plot follow the straight line from lower left to
+When observing the plot, if the plot follows a straight line from lower left to
 upper right, then the classifier cannot differentiate between negative and
-postive data. If the curve tend to bend to the upper left, then the model can
+postive data. If the curve bends to the upper left, then the model can
 differentiate the actual positive and negative data. On the contrary, if the
-curve tend to bend to lower right, then it just completely wrong prediction
-model.
+curve bends to the lower right, then you're dealing with a completely wrong
+prediction model.
 
-To performance of a classifier model is then calculated by calculating the Area
-Under Curve (AUC). The AUC score will range between 0 and 1. The higher the
-value of AUC, usually the better the model is. Quick facts, a perfect classifier
+The performance of a classifier model is calculated by calculating the Area
+Under Curve (AUC). The AUC score will range between 0 and 1. The higher the AUC
+score, the better the model is. Here's some quick facts, a perfect classifier
 has an AUC of 1, whereas a random classifier has one of 0.5. A value below 0.5
 means that you can invert your outputs to get a better performance so you
 probably did something wrong.
