Added Quitting Instagram Stories post

--- a/_posts/2018-05-24-curves.md
+++ b/_posts/2018-05-24-curves.md
@@ -2,7 +2,7 @@
 layout: post
 title: Love your (ROC) curves
 description: A brief explanation about ROC curves
-featured: true
+featured: false
 ---
 Ranking models is an important step in deciding whether your model tuning
 efforts decidely worked for the best or not. There's two popular metrics used to
