--- a/_posts/2019-11-11-now-2019-november.md
+++ b/_posts/2019-11-11-now-2019-november.md
@@ -50,7 +50,7 @@ Here's my beeminder leetcode graph
 {: align="middle"}
 ![beeminder]
 
-[now_page]: /images/adnan_laptop.jpg
+[now_page]: /images/now-2019-november.jpg
 {: width="70%"}
 [beeminder]: /images/beeminder.png
 {: width="70%"}
