--- a/_posts/2020-08-10-now-2020-august.md
+++ b/_posts/2020-08-10-now-2020-august.md
@@ -44,5 +44,5 @@ with while interning. These are:
 2. Testing frameworks (Mockito/EasyMock/PowerMock)
 3. Ruby
 
-[now_page]: /images/wfh_walks.jpg
+[now_page]: /images/now-2020-august.jpg
 {:class="shadow-img"  width="70%"}
